# network-sandbox

./: .gitignore  BUILD  Cargo.toml  Makefile  WORKSPACE
cargo/: Cargo.toml  crates.bzl
cargo/remote/: MacTypes-sys-2.1.0.BUILD  aho-corasick-0.6.10.BUILD  arrayvec-0.3.25.BUILD  arrayvec-0.4.12.BUILD  atom-0.3.5.BUILD  cfg-if-0.1.10.BUILD  core-foundation-sys-0.5.1.BUILD  crossbeam-deque-0.7.1.BUILD  crossbeam-epoch-0.7.2.BUILD  crossbeam-queue-0.1.2.BUILD  crossbeam-utils-0.6.6.BUILD  derivative-1.0.3.BUILD  hibitset-0.3.2.BUILD  lazy_static-1.4.0.BUILD  libc-0.2.65.BUILD  memchr-2.2.1.BUILD  memoffset-0.5.1.BUILD  mopa-0.2.2.BUILD  nodrop-0.1.14.BUILD  num_cpus-1.10.1.BUILD  odds-0.2.26.BUILD  proc-macro2-0.4.30.BUILD  pulse-0.5.3.BUILD  quote-0.3.15.BUILD  quote-0.6.13.BUILD  rayon-0.8.2.BUILD  rayon-core-1.6.0.BUILD  redox_syscall-0.1.56.BUILD  regex-0.2.11.BUILD  regex-syntax-0.5.6.BUILD  rustc_version-0.2.3.BUILD  scopeguard-1.0.0.BUILD  security-framework-sys-0.2.3.BUILD  semver-0.9.0.BUILD  semver-parser-0.7.0.BUILD  shred-0.5.2.BUILD  shred-derive-0.3.0.BUILD  smallvec-0.4.5.BUILD  specs-0.10.0.BUILD  syn-0.11.11.BUILD  (+9 more)
example/src/: main.rs
